FEAT: Avanços no projeto. Adicionando métodos de delete post e edit post & pesquisa usuários via barra de pesquisa.

--- a/social-frontend/social-frontend/src/app/app.component.html
+++ b/social-frontend/social-frontend/src/app/app.component.html
@@ -1,2 +1,3 @@
+<app-pesquisar-usuarios [ngClass]="isFixed" *ngIf="authService.autenticado"></app-pesquisar-usuarios>
 <p-messages></p-messages>
 <router-outlet></router-outlet>
