--- a/social-frontend/social-frontend/src/app/login/components/login/login.component.html
+++ b/social-frontend/social-frontend/src/app/login/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formLogin" (ngSubmit)="logar()">
+<form class="scalein animation-duration-500" [formGroup]="formLogin" (ngSubmit)="logar()">
     <div class="grid mt-8">
         <div class="col-5 flex align-items-center justify-content-center">
             <div class="p-fluid">
